# freenet-core

./: contract-interface.html  print.html  tutorial.html
apps/freenet-chat/: Cargo.toml  README.md
apps/freenet-chat/app/: Cargo.toml
apps/freenet-chat/app/src/: main.rs
apps/freenet-chat/contracts/chat/: Cargo.toml
apps/freenet-chat/contracts/chat/src/: lib.rs
apps/freenet-chat/contracts/room/: Cargo.toml
apps/freenet-chat/types/: Cargo.toml
apps/freenet-chat/types/src/: lib.rs
apps/freenet-chat/web/: Cargo.toml  Dioxus.toml
apps/freenet-chat/web/src/: main.rs
apps/freenet-email-app/web/: Cargo.toml
apps/freenet-ping/types/src/: lib.rs
components/: contracts.html
crates/core/src/transport/: connection_handler.rs
