[workspace]
resolver = "2"
members = ["contracts/chat", "app", "types"]

[workspace.dependencies]
freenet-stdlib = { path = "../../stdlib/rust", features = ["contract"] }
freenet-chat-types = { path = "types", default-features = false }
chrono = { version = "0.4", default-features = false }

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 's'
debug = false
codegen-units = 1
panic = 'abort'
strip = true

